--- a/src/app/pages/deck-list/deck-list.component.html
+++ b/src/app/pages/deck-list/deck-list.component.html
@@ -6,8 +6,8 @@
         <div class="bg-white p-4 shadow rounded">
             <h2 class="text-xl font-semibold">{{ deck.name }}</h2>
             <button class="bg-red-500 text-white px-4 py-2 rounded" (click)="removeDeck(i)">Remover</button>
-            <button class="bg-yellow-500 text-white px-4 py-2 rounded" [routerLink]="['/edit-deck', i]">Editar</button>
-            <button class="bg-green-500 text-white px-4 py-2 rounded" [routerLink]="['/deck-details', i]">Ver
+            <button class="bg-yellow-500 text-white px-4 py-2 rounded ml-2" [routerLink]="['/edit-deck', i]">Editar</button>
+            <button class="bg-green-500 text-white px-4 py-2 rounded ml-2" [routerLink]="['/deck-details', i]">Ver
                 Detalhes</button>
         </div>
     </div>
