--- a/src/app/pages/deck-form/deck-form.component.html
+++ b/src/app/pages/deck-form/deck-form.component.html
@@ -1,36 +1,21 @@
 <div class="container mx-auto p-4">
-  <h1 class="text-2xl font-bold mb-4">Criar Novo Baralho</h1>
+  <h1 class="text-2xl font-bold mb-4">{{ isEditRoute ? 'Editar Baralho' : 'Criar Novo Baralho' }}</h1>
 
-  <form (ngSubmit)="createDeck()" #deckForm="ngForm">
+  <form (ngSubmit)="saveDeck()" #deckForm="ngForm">
     <div class="mb-4">
       <label for="deckName" class="block mb-2">Nome do Baralho:</label>
-      <input
-        type="text"
-        id="deckName"
-        name="deckName"
-        [(ngModel)]="deckName"
-        class="border rounded p-2 w-full"
-        required
-      />
+      <input type="text" id="deckName" name="deckName" [(ngModel)]="deckName" class="border rounded p-2 w-full" required
+        [disabled]="isDeckNameDisabled" />
     </div>
 
     <div class="mb-4">
       <label for="selectedCard" class="block mb-2">Nome da Carta:</label>
-      <select
-        id="selectedCard"
-        name="selectedCard"
-        [(ngModel)]="selectedCard"
-        class="border rounded p-2 w-full"
-      >
+      <select id="selectedCard" name="selectedCard" [(ngModel)]="selectedCard" class="border rounded p-2 w-full">
         <option *ngFor="let card of allCards" [value]="card.id">
           {{ card.name }}
         </option>
       </select>
-      <button
-        type="button"
-        class="bg-blue-500 text-white px-4 py-2 rounded mt-2"
-        (click)="addCard()"
-      >
+      <button type="button" class="bg-blue-500 text-white px-4 py-2 rounded mt-2" (click)="addCard()">
         Adicionar Carta
       </button>
     </div>
@@ -38,15 +23,8 @@
     <div *ngIf="cards.length > 0" class="mb-4">
       <h2 class="text-xl font-bold mb-2">Cartas no Baralho:</h2>
       <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-        <div
-          *ngFor="let card of cards"
-          class="card-container border p-2 rounded shadow-lg"
-        >
-          <img
-            [src]="card.images.small"
-            alt="{{ card.name }}"
-            class="w-full h-auto rounded-t-lg"
-          />
+        <div *ngFor="let card of cards" class="card-container border p-2 rounded shadow-lg">
+          <img [src]="card.images.small" alt="{{ card.name }}" class="w-full h-auto rounded-t-lg" />
           <div class="p-2">
             <h3>Nome: {{ card.name }}</h3>
             <p><strong>SuperType:</strong> {{ card.supertype }}</p>
@@ -63,11 +41,7 @@
       <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded">
         Salvar Baralho
       </button>
-      <button
-        type="button"
-        class="bg-gray-500 text-white px-4 py-2 rounded"
-        (click)="clearForm()"
-      >
+      <button type="button" class="bg-gray-500 text-white px-4 py-2 rounded" (click)="clearForm()">
         Limpar Formulário
       </button>
     </div>
