--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div class="container mx-auto p-4">
-  <h1 class="text-3xl font-bold mb-6">Pokedex</h1>
+  <button
+    (click)="toggleTheme()"
+    class="bg-blue-500 text-white px-4 py-2 rounded mb-4 hover:bg-blue-600"
+  >
+    Alternar Tema
+  </button>
   <router-outlet></router-outlet>
 </div>
-
