--- a/src/app/pages/deck-form/deck-form.component.html
+++ b/src/app/pages/deck-form/deck-form.component.html
@@ -23,7 +23,7 @@
     <div *ngIf="cards.length > 0" class="mb-4">
       <h2 class="text-xl font-bold mb-2">Cartas no Baralho:</h2>
       <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-        <div *ngFor="let card of cards" class="card-container border p-2 rounded shadow-lg relative">
+        <div *ngFor="let card of cards" class="card-container border p-2 rounded shadow-lg relative transition-transform duration-200 hover:transform hover:translate-y-[-5px] hover:shadow-lg">
           <img [src]="card.images.small" alt="{{ card.name }}" class="w-full h-auto rounded-t-lg" />
           <div class="p-2">
             <h3>Nome: {{ card.name }}</h3>
@@ -51,14 +51,3 @@
     </div>
   </form>
 </div>
-
-<style>
-  .card-container {
-    transition: transform 0.2s, box-shadow 0.2s;
-  }
-
-  .card-container:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-  }
-</style>
