--- a/src/app/pages/deck-form/deck-form.component.html
+++ b/src/app/pages/deck-form/deck-form.component.html
@@ -12,7 +12,7 @@
       <label for="selectedCard" class="block mb-2">Nome da Carta:</label>
       <select id="selectedCard" name="selectedCard" [(ngModel)]="selectedCard" class="border rounded p-2 w-full">
         <option *ngFor="let card of allCards" [value]="card.id">
-          {{ card.name }}
+          {{ card.name }} {{ card.types?.length ? '(' + card.types.join(", ") + ')' : '' }}
         </option>
       </select>
       <button type="button" class="bg-blue-500 text-white px-4 py-2 rounded mt-2" (click)="addCard()">
