--- a/src/app/pages/deck-form/deck-form.component.html
+++ b/src/app/pages/deck-form/deck-form.component.html
@@ -1,5 +1,7 @@
 <div class="container mx-auto p-4">
-  <h1 class="text-2xl font-bold mb-4">{{ isEditRoute ? 'Editar Baralho' : 'Criar Novo Baralho' }}</h1>
+  <h1 class="text-2xl font-bold mb-4">
+    {{ isEditRoute ? "Editar Baralho" : "Criar Novo Baralho" }}
+  </h1>
 
   <form (ngSubmit)="saveDeck()" #deckForm="ngForm">
     <div class="mb-4">
@@ -10,20 +12,50 @@
 
     <div class="mb-4">
       <label for="selectedCard" class="block mb-2">Nome da Carta:</label>
-      <select id="selectedCard" name="selectedCard" [(ngModel)]="selectedCard" class="border rounded p-2 w-full">
-        <option *ngFor="let card of allCards" [value]="card.id">
-          {{ card.name }} {{ card.types?.length ? '(' + card.types.join(", ") + ')' : '' }}
-        </option>
-      </select>
+      <div class="relative">
+        <button type="button" class="border rounded p-2 w-full bg-white dark:bg-gray-800 dark:text-white"
+          (click)="toggleDropdown()">
+          {{ selectedCardName || 'Selecione uma carta' }}
+        </button>
+        <div *ngIf="dropdownOpen"
+          class="absolute z-10 mt-2 w-full bg-white dark:bg-gray-800 border rounded shadow-lg max-h-60 overflow-auto">
+          <div *ngFor="let card of allCards"
+            class="flex items-center p-2 hover:bg-gray-200 dark:hover:bg-gray-700 cursor-pointer"
+            (click)="selectCard(card)">
+            <img [src]="card.images.small" alt="{{ card.name }}" class="w-10 h-10 mr-2" />
+            <div>
+              <p>{{ card.name }}</p>
+              <p class="text-xs text-gray-500 dark:text-gray-400">{{ card.types?.length ? '(' + card.types.join(', ') +
+                ')' : '' }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
       <button type="button" class="bg-blue-500 text-white px-4 py-2 rounded mt-2" (click)="addCard()">
         Adicionar Carta
       </button>
     </div>
 
+    <div *ngIf="cards.length > 0">
+      <h2 class="text-xl font-semibold mb-2">Detalhes do Baralho</h2>
+      <div class="mb-4 p-4 rounded">
+        <p class="text-lg">
+          <strong>Total de Pokémon:</strong> {{ pokemonCount }}
+        </p>
+        <p class="text-lg">
+          <strong>Total de Cartas de Treinador:</strong> {{ trainerCount }}
+        </p>
+        <p class="text-lg">
+          <strong>Total de Tipos Únicos:</strong> {{ uniqueTypes }}
+        </p>
+      </div>
+    </div>
+
     <div *ngIf="cards.length > 0" class="mb-4">
       <h2 class="text-xl font-bold mb-2">Cartas no Baralho:</h2>
       <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-        <div *ngFor="let card of cards" class="card-container border p-2 rounded shadow-lg relative transition-transform duration-200 hover:transform hover:translate-y-[-5px] hover:shadow-lg">
+        <div *ngFor="let card of cards"
+          class="card-container border p-2 rounded shadow-lg relative transition-transform duration-200 hover:transform hover:translate-y-[-5px] hover:shadow-lg">
           <img [src]="card.images.small" alt="{{ card.name }}" class="w-full h-auto rounded-t-lg" />
           <div class="p-2">
             <h3>Nome: {{ card.name }}</h3>
