refactor: Simplify card display in deck-details.component.html

--- a/src/app/pages/deck-details/deck-details.component.html
+++ b/src/app/pages/deck-details/deck-details.component.html
@@ -8,7 +8,7 @@
 
     <h2 class="text-xl font-semibold mb-2 mt-4">Cartas no Baralho</h2>
     <div class="grid grid-cols-3 gap-4">
-        <div *ngFor="let card of deck?.cards" class="bg-white p-4 shadow rounded">
+        <div *ngFor="let card of deck?.cards" class="p-4 shadow rounded">
             <h3 class="font-semibold">{{ card.name }}</h3>
         </div>
     </div>
